# base-askapparallel

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  askap_askapparallel.cc.in  askap_askapparallel.h  dependencies.cmake
askap/askapparallel/: AskapParallel.cc  AskapParallel.h  CMakeLists.txt  MPIComms.cc  MPIComms.h
cmake/: askap-parallel-config.cmake.in
